<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="4dp">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="left|center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/closeButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="12dp"
                    android:background="@drawable/close"
                    android:gravity="center"
                    android:padding="10dp" />

                <ImageView
                    android:id="@+id/redoButton"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_marginLeft="8dp"
                    android:background="@drawable/redo"
                    android:gravity="center" />

                <ImageView
                    android:id="@+id/undoButton"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_marginLeft="10dp"
                    android:background="@drawable/undo"
                    android:gravity="center" />
            </LinearLayout>

            <Button
                android:id="@+id/nextButton"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scaleType="fitXY"
                android:text="@string/button_done"
                android:textSize="12sp" />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RelativeLayout
                android:id="@+id/mainLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/bg"
                android:gravity="center"
                android:paddingBottom="50dp" />

            <ImageView
                android:id="@+id/colorButton"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_margin="10dp"
                android:background="@drawable/white_drawable" />

            <RelativeLayout
                android:id="@+id/subBottomBar"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_above="@+id/bottomBar"
                android:background="#00000000"
                android:gravity="center_vertical">

                <RelativeLayout
                    android:id="@+id/magicWand_layout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="#80000000"
                    android:gravity="center_vertical"
                    android:visibility="gone">

                    <LinearLayout
                        android:id="@+id/liMagicRemove"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="16dp"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageButton
                            android:id="@+id/magic_remove_button"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@drawable/magic_remove_button"
                            android:scaleType="fitXY" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/remove"
                            android:textColor="#FFF"
                            android:textSize="10sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/liMagicRestore"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="16dp"
                        android:layout_toRightOf="@+id/liMagicRemove"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageButton
                            android:id="@+id/magic_restore_button"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@drawable/magic_restore_button"
                            android:scaleType="fitXY" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/restore"
                            android:textColor="#FFF"
                            android:textSize="10sp" />
                    </LinearLayout>

                    <SeekBar
                        android:id="@+id/magic_seekbar"
                        android:layout_width="230dp"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:max="30"
                        android:paddingRight="20dp"
                        android:progressDrawable="@drawable/progress"
                        android:thumb="@drawable/thumb" />

                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/eraser_layout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="#80000000"
                    android:gravity="center_vertical"
                    android:visibility="gone">

                    <LinearLayout
                        android:id="@+id/liErase"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="16dp"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageButton
                            android:id="@+id/erase_sub_button"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@drawable/eraser_sub_button"
                            android:scaleType="fitXY" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/erase"
                            android:textColor="#FFF"
                            android:textSize="10sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/liUnErase"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="16dp"
                        android:layout_toRightOf="@+id/liErase"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageButton
                            android:id="@+id/unerase_sub_button"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@drawable/uneraser_sub_button"
                            android:scaleType="fitXY" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/unerase"
                            android:textColor="#FFF"
                            android:textSize="10sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/liBrush01"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="16dp"
                        android:layout_toLeftOf="@+id/liBrush02"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageButton
                            android:id="@+id/brush_size_1_button"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@drawable/brush_size1_button"
                            android:scaleType="fitXY" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="X1"
                            android:textColor="#FFF"
                            android:textSize="12sp"
                            android:textStyle="bold" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/liBrush02"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="16dp"
                        android:layout_toLeftOf="@+id/liBrush03"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageButton
                            android:id="@+id/brush_size_2_button"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@drawable/brush_size2_button"
                            android:scaleType="fitXY" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="X2"
                            android:textColor="#FFF"
                            android:textSize="12sp"
                            android:textStyle="bold" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/liBrush03"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="16dp"
                        android:layout_toLeftOf="@+id/liBrush04"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageButton
                            android:id="@+id/brush_size_3_button"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@drawable/brush_size3_button"
                            android:scaleType="fitXY" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="X3"
                            android:textColor="#FFF"
                            android:textSize="12sp"
                            android:textStyle="bold" />
                    </LinearLayout>


                    <LinearLayout
                        android:id="@+id/liBrush04"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="16dp"
                        android:layout_marginRight="16dp"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageButton
                            android:id="@+id/brush_size_4_button"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@drawable/brush_size4_button"
                            android:scaleType="fitXY" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="X4"
                            android:textColor="#FFF"
                            android:textSize="12sp"
                            android:textStyle="bold" />
                    </LinearLayout>

                </RelativeLayout>
            </RelativeLayout>

            <LinearLayout
                android:id="@+id/bottomBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:background="@color/colorPrimaryDark"
                android:gravity="center"
                android:padding="10dp"
                android:paddingTop="3dp">

                <Button
                    android:id="@+id/magicButton"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="2dp"
                    android:layout_weight="1"
                    android:text="@string/button_magic"
                    android:textSize="12sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/eraseButton"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="1dp"
                    android:layout_weight="1"
                    android:text="@string/button_eraser"
                    android:textSize="12sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/mirrorButton"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="1dp"
                    android:layout_weight="1"
                    android:text="@string/button_mirror"
                    android:textSize="12sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/positionButton"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/button_position"
                    android:textSize="12sp"
                    android:textStyle="bold" />
            </LinearLayout>

        </RelativeLayout>
    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_centerInParent="true" />

</RelativeLayout>